--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,65 @@
 # Project exclude paths
 /cmake-build-default/
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdC/a.exe
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdCXX/a.exe
+/cmake-build-debug/CMakeFiles/Survivor.dir/annexe.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/annexe.cpp.obj.d
+/cmake-build-debug/CMakeFiles/Survivor.dir/build.make
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-6631c08df9fa5d911d22.json
+/cmake-build-debug/CMakeFiles/clion-environment.txt
+/cmake-build-debug/CMakeFiles/clion-log.txt
+/cmake-build-debug/CMakeFiles/cmake.check_cache
+/cmake-build-debug/CMakeFiles/Survivor.dir/cmake_clean.cmake
+/cmake-build-debug/cmake_install.cmake
+/cmake-build-debug/CMakeCache.txt
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeCXXCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.23.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeDetermineCompilerABI_CXX.bin
+/cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-3cb5c85a52fdb9c2719e.json
+/cmake-build-debug/CMakeFiles/CMakeOutput.log
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeRCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.23.2/CMakeSystem.cmake
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-5aca7c5e059ac43153b8.json
+/cmake-build-debug/CMakeFiles/Survivor.dir/compiler_depend.internal
+/cmake-build-debug/CMakeFiles/Survivor.dir/compiler_depend.make
+/cmake-build-debug/CMakeFiles/Survivor.dir/compiler_depend.ts
+/cmake-build-debug/CMakeFiles/Survivor.dir/Coordonnee.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/Coordonnee.cpp.obj.d
+/cmake-build-debug/CMakeFiles/Survivor.dir/depend.make
+/cmake-build-debug/CMakeFiles/Survivor.dir/DependInfo.cmake
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json
+/cmake-build-debug/CMakeFiles/Survivor.dir/flags.make
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-12-20T15-03-53-0567.json
+/cmake-build-debug/Testing/Temporary/LastTest.log
+/cmake-build-debug/CMakeFiles/Survivor.dir/link.txt
+/cmake-build-debug/CMakeFiles/Survivor.dir/linklibs.rsp
+/cmake-build-debug/CMakeFiles/Survivor.dir/main.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/main.cpp.obj.d
+/cmake-build-debug/Makefile
+/cmake-build-debug/CMakeFiles/Makefile.cmake
+/cmake-build-debug/CMakeFiles/Makefile2
+/cmake-build-debug/CMakeFiles/Survivor.dir/objects.a
+/cmake-build-debug/CMakeFiles/Survivor.dir/objects1.rsp
+/cmake-build-debug/CMakeFiles/Survivor.dir/progress.make
+/cmake-build-debug/CMakeFiles/progress.marks
+/cmake-build-debug/CMakeFiles/Survivor.dir/Random.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/Random.cpp.obj.d
+/cmake-build-debug/CMakeFiles/Survivor.dir/Robot.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/Robot.cpp.obj.d
+/cmake-build-debug/Survivor.cbp
+/cmake-build-debug/CMakeFiles/Survivor.dir/Survivor.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/Survivor.cpp.obj.d
+/cmake-build-debug/Survivor.exe
+/cmake-build-debug/.cmake/api/v1/reply/target-Survivor-Debug-f2ca2e1adc7e67c870df.json
+/cmake-build-debug/CMakeFiles/TargetDirectories.txt
+/cmake-build-debug/CMakeFiles/Survivor.dir/Terrain.cpp.obj
+/cmake-build-debug/CMakeFiles/Survivor.dir/Terrain.cpp.obj.d
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-645c0a0f886a17c61ed9.json
