--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.24)
+cmake_minimum_required(VERSION 3.23)
 project(Survivor)
 
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Survivor main.cpp Random.cpp Random.h Robot.cpp Robot.h Terrain.cpp Terrain.h
-        Survivor.cpp Survivor.h Coordonnee.cpp Coordonnee.h annexe.cpp annexe.h)
+        Survivor.cpp Survivor.h Coordonnee.h annexe.cpp annexe.h)
