--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@
 /cmake-build-debug/CMakeFiles/Survivor.dir/Terrain.cpp.obj.d
 /cmake-build-debug/.cmake/api/v1/query/toolchains-v1
 /cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-645c0a0f886a17c61ed9.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-12-20T19-39-16-0568.json
