--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Survivor)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Survivor main.cpp Random.cpp Random.h Robot.cpp Robot.h Terrain.cpp Terrain.h
-        Survivor.cpp Survivor.h Coordonnee.h annexe.cpp annexe.h)
+        Survivor.cpp Survivor.h Coordonnee.h annexe.cpp annexe.h annexe.cpp annexe.h)
